--- a/projects.html
+++ b/projects.html
@@ -76,7 +76,7 @@ Below are the transformative projects I have spearheaded within our community, a
                 </svg>
                 <i class="bx bxl-dribbble"></i>
               </div>
-              <h4><a href="">Cattle Management System</a></h4>
+              <h4><a href="https://github.com/juliet-tech/Cattle">Cattle Management System</a></h4>
               <p>Connected cattle buyers and sellers, which assisted in reducing expenses from middlemen that were selfish and corrupted</p>
             </div>
           </div>
